<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:showAsAction="always"
        android:title="@string/tutorial" />
    <item
        android:id="@+id/nextEmptyPlot"
        android:icon="@drawable/ic_forward"
        android:showAsAction="always"
        android:title="@string/nextmissingbutton" />
    <item
        android:id="@+id/jumpToPlot"
        android:icon="@drawable/ic_barcode"
        android:showAsAction="always"
        android:title="@string/jumptoplotidbutton" />
    <item
        android:id="@+id/barcodeScan"
        android:icon="@drawable/ic_barcode_scan"
        android:showAsAction="always"
        android:title="@string/barcodescantitle" />
    <item
        android:id="@+id/datagrid"
        android:icon="@drawable/ic_grid"
        android:showAsAction="always"
        android:title="@string/datagrid" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:showAsAction="always"
        android:title="@string/search" />"
    <item
        android:id="@+id/resources"
        android:icon="@drawable/ic_folder"
        android:showAsAction="always"
        android:title="@string/resources" />"
    <item
        android:id="@+id/summary"
        android:icon="@drawable/ic_details"
        android:showAsAction="always"
        android:title="@string/mapsummary" />"
    <item
        android:id="@+id/lockData"
        android:icon="@drawable/ic_lock"
        android:showAsAction="always"
        android:title=""/>
</menu>

