<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_tb_help"
        android:showAsAction="always"
        android:title="@string/tutorial" />
    <item
        android:id="@+id/sortTrait"
        android:icon="@drawable/ic_tb_sort"
        android:showAsAction="ifRoom"
        android:title="@string/sort" />
    <item
        android:id="@+id/deleteTrait"
        android:icon="@drawable/ic_tb_delete"
        android:showAsAction="ifRoom"
        android:title="@string/deletealltraits" />
    <item
        android:id="@+id/toggleTrait"
        android:icon="@drawable/ic_tb_toggle_all"
        android:showAsAction="always"
        android:title="@string/visibility" />
    <item
        android:id="@+id/addTrait"
        android:icon="@drawable/ic_tb_add_circle"
        android:showAsAction="ifRoom"
        android:title="@string/addtrait" />
    <item
        android:id="@+id/importexport"
        android:icon="@drawable/ic_tb_import_export"
        android:showAsAction="ifRoom"
        android:title="@string/importexport" />
</menu>

