<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:text="@string/versiontitle"
        android:textColor="@color/main_colorAccent"
        android:textSize="@dimen/text_size_medium"
        android:clickable="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvOtherApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:text="@string/otherapps"
        android:textColor="@color/main_colorAccent"
        android:textSize="@dimen/text_size_medium"
        android:clickable="true"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/developerMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:text="@string/developers"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/developerTrevor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/devr"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/developerTrevorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:autoLink="email"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/devremail"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_xsmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/developerTrevorSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:autoLink="web"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:text="@string/devrsite"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_xsmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/developerJesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/devp"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/developerJesseEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:autoLink="email"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/devpemail"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_xsmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/developerJesseSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:autoLink="web"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:text="@string/devpsite"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_xsmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/translatorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:text="@string/translators"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/translatorList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:text="@string/translist"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/button_default_width"
            android:text="@string/okay"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>