<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format"
                android:textColor="@color/s_text"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/formatDB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/dbformat"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_medium" />

            <CheckBox
                android:id="@+id/formatExcel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tableformat"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fieldcolumns"
                        android:textColor="@color/s_text"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/fieldsRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/onlyUnique"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/onlyunique"
                            android:textSize="@dimen/text_size_medium" />

                        <RadioButton
                            android:id="@+id/allColumns"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/allcolumns"
                            android:textSize="@dimen/text_size_medium" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/traits"
                        android:textColor="@color/s_text"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/traitsRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/activeTraits"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activetraits"
                            android:textSize="@dimen/text_size_medium" />

                        <RadioButton
                            android:id="@+id/allTraits"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/alltraits"
                            android:textSize="@dimen/text_size_medium" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filename"
                android:textColor="@color/s_text"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fileName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="200"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_medium" />

            <CheckBox
                android:id="@+id/overwrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overwrite_previous_export"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="@dimen/button_default_width"
            android:text="@string/okay"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="@dimen/button_default_width"
            android:text="@string/close"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>