<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:inputType="textCapSentences"
        android:maxLength="200"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColor="@color/s_text"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:inputType="textCapSentences"
        android:maxLength="200"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColor="@color/s_text"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:drawable/btn_default"
            android:minWidth="@dimen/button_default_width"
            android:text="@string/okay"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>